--- a/app/views/pages/dashboard/payments/account.liquid
+++ b/app/views/pages/dashboard/payments/account.liquid
@@ -7,7 +7,8 @@ metadata:
 ---
 
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function account = 'modules/stripe/lib/payments/account', user_id: context.current_user.id
 
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
