--- a/app/views/pages/admin/support-tickets/index.liquid
+++ b/app/views/pages/admin/support-tickets/index.liquid
@@ -2,7 +2,8 @@
 slug: admin/support-tickets
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   include 'lib/must_be_superadmin'
 
   function contacts = 'lib/queries/contacts/search', limit: 100
