--- a/app/views/pages/api/comments/create.json.liquid
+++ b/app/views/pages/api/comments/create.json.liquid
@@ -3,7 +3,8 @@ slug: api/comments
 method: post
 ---
 {% liquid
-  include 'lib/must_be_authenticated_api'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
 
   function object = 'lib/commands/comments/create', object: context.params.comment
   if object.valid
