--- a/app/views/pages/api/items/create.json.liquid
+++ b/app/views/pages/api/items/create.json.liquid
@@ -1,9 +1,9 @@
 ---
 method: post
 ---
-
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
 
   function object = 'lib/commands/items/create', object: context.params.item, owner: context.current_user.id
 
