--- a/app/views/pages/api/line_items/create.json.liquid
+++ b/app/views/pages/api/line_items/create.json.liquid
@@ -4,7 +4,8 @@ method: post
 response_headers: "{% render 'theme/json/headers' %}"
 ---
 {% liquid
-  function current_profile = 'lib/current_profile_api', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
 
   function object = 'lib/commands/line_items/create', object: context.params.line_item
 
