--- a/app/views/pages/api/line_items/update.json.liquid
+++ b/app/views/pages/api/line_items/update.json.liquid
@@ -3,7 +3,8 @@ slug: line_items
 method: put
 ---
 {% liquid
-  function current_profile = 'lib/current_profile_api', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
 
   function object = 'lib/queries/line_items/find', id: context.params.id
   function object = 'lib/commands/line_items/update', object: object, params: context.params.line_item
