--- a/app/views/pages/api/photos/create.json.liquid
+++ b/app/views/pages/api/photos/create.json.liquid
@@ -3,7 +3,9 @@ slug: api/photos
 method: post
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, require_profile: false
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
+
   function object = 'lib/commands/photos/create', object: context.params.photo, current_profile: current_profile
 
   include 'theme/json/shared/show', object: object
