--- a/app/views/pages/api/users/followers/toggle.json.liquid
+++ b/app/views/pages/api/users/followers/toggle.json.liquid
@@ -1,8 +1,10 @@
 ---
 method: post
 ---
-
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
+
   assign now = 'now' | to_time
 
   function follower = 'lib/queries/profiles/find', user_id: context.current_user.id
