--- a/app/views/pages/api/users/photos.liquid
+++ b/app/views/pages/api/users/photos.liquid
@@ -2,7 +2,8 @@
 method: post
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
 
   function object = 'lib/commands/users/photos/create', object: context.params.photo
   include 'theme/json/shared/show', object: object
