--- a/app/views/pages/categories/update.liquid
+++ b/app/views/pages/categories/update.liquid
@@ -3,7 +3,8 @@ slug: categories
 method: put
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   include 'lib/must_be_superadmin'
 
   function object = 'lib/commands/call', object: context.params.category, command: 'categories/update', selection: 'model_update'
