--- a/app/views/pages/dashboard/buy/orders/checkout.liquid
+++ b/app/views/pages/dashboard/buy/orders/checkout.liquid
@@ -8,7 +8,8 @@ metadata:
     - label: app.orders.list
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function order = 'lib/queries/orders/find', buyer: current_profile.id, id: context.params.slugs withStatuses: true
   function checkout_session = 'lib/commands/orders/checkout_session/create', order: order, constants: context.constants
