--- a/app/views/pages/dashboard/buy/orders/index.liquid
+++ b/app/views/pages/dashboard/buy/orders/index.liquid
@@ -7,7 +7,8 @@ metadata:
     - label: app.orders.list
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function orders = 'lib/queries/orders/search', limit: 100, buyer: current_profile.id, withStatuses: true
 
