--- a/app/views/pages/dashboard/buy/orders/show.liquid
+++ b/app/views/pages/dashboard/buy/orders/show.liquid
@@ -9,7 +9,8 @@ metadata:
 ---
 {% liquid
 
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function order = 'lib/queries/orders/find', buyer: current_profile.id, id: context.params.slugs, withStatuses: true
 
