--- a/app/views/pages/dashboard/groups/edit.liquid
+++ b/app/views/pages/dashboard/groups/edit.liquid
@@ -7,11 +7,9 @@ metadata:
       url: /dashboard/groups
     - label: app.edit
 ---
-
-
 {% liquid
-
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function group = 'lib/queries/groups/find', id: context.params.id, owner_id: current_profile.id, relation_name: 'owner', with_owner: true
   include 'lib/present_or_404', property: group.id
   function presigned_url = 'lib/queries/presigned_url'
@@ -19,5 +17,4 @@ metadata:
   include 'lib/can_edit_group', profile_id: current_profile.id, group: group
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
   include 'theme/simple/dashboard/groups/edit', user: context.current_user, object: group, presigned_url: presigned_url
-
 %}
