--- a/app/views/pages/dashboard/groups/index.liquid
+++ b/app/views/pages/dashboard/groups/index.liquid
@@ -6,7 +6,8 @@ metadata:
     - label: app.groups.list
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function groups = 'lib/queries/groups/search', limit: 100, owner_id: current_profile.id, relation_name: 'owner'
 
