--- a/app/views/pages/dashboard/groups/update.liquid
+++ b/app/views/pages/dashboard/groups/update.liquid
@@ -3,7 +3,8 @@ slug: dashboard/groups
 method: put
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function group = 'lib/queries/groups/find', id: context.params.id, owner_id: current_profile.id, relation_name: 'owner'
   include 'lib/present_or_404', property:  group.id
 
