--- a/app/views/pages/dashboard/items/create.liquid
+++ b/app/views/pages/dashboard/items/create.liquid
@@ -2,7 +2,8 @@
 method: post
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function object = 'lib/commands/items/create', object: context.params.item, owner: current_profile.id
   if object.valid
