--- a/app/views/pages/dashboard/items/delete.liquid
+++ b/app/views/pages/dashboard/items/delete.liquid
@@ -2,7 +2,8 @@
 method: post
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function item = 'lib/queries/items/find', id: context.params.id, withOrders: true
   function object = 'lib/commands/items/delete', item: item
