--- a/app/views/pages/dashboard/posts/create.liquid
+++ b/app/views/pages/dashboard/posts/create.liquid
@@ -3,7 +3,8 @@ slug: dashboard/posts
 method: post
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function object = 'lib/commands/posts/create', object: context.params.post, current_profile: current_profile
 
   if object.valid
