--- a/app/views/pages/dashboard/posts/index.liquid
+++ b/app/views/pages/dashboard/posts/index.liquid
@@ -9,7 +9,8 @@ metadata:
 ---
 
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function posts = 'lib/queries/posts/search', limit: 100, parent_id_exists: false, creator_id: current_profile.id
 
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs, value: posts.total_entries
