--- a/app/views/pages/dashboard/posts/update.liquid
+++ b/app/views/pages/dashboard/posts/update.liquid
@@ -3,7 +3,8 @@ slug: dashboard/posts
 method: put
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
   function post = 'lib/queries/posts/find', id: context.params.post.id, creator_id: current_profile.id
   include 'lib/present_or_404', property:  post.id
 
