--- a/app/views/pages/dashboard/profile/edit.liquid
+++ b/app/views/pages/dashboard/profile/edit.liquid
@@ -1,5 +1,6 @@
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, require_profile: false
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
 
   graphql presigned_url = 'photos/presign' | dig: 'presigned'
 
