--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -3,7 +3,8 @@ slug: dashboard/profile
 method: put
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, require_profile: false
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
 
   function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_profile
   if object.valid
