--- a/app/views/pages/orders/line_items/delete.liquid
+++ b/app/views/pages/orders/line_items/delete.liquid
@@ -3,7 +3,8 @@ slug: 'orders/line_items'
 method: delete
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function line_item = 'lib/queries/line_items/find', id: context.params.id
   function object = 'lib/commands/line_items/delete', object: line_item
