--- a/app/views/pages/admin/support-tickets/index.liquid
+++ b/app/views/pages/admin/support-tickets/index.liquid
@@ -3,7 +3,7 @@ slug: admin/support-tickets
 ---
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
-  include 'lib/profile_present_or_redirect', profile: current_profile
+  include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
   include 'lib/must_be_superadmin'
 
   function contacts = 'lib/queries/contacts/search', limit: 100
