--- a/app/views/pages/dashboard/groups/new.liquid
+++ b/app/views/pages/dashboard/groups/new.liquid
@@ -7,9 +7,9 @@ metadata:
       url: /dashboard/groups
     - label: app.groups.new
 ---
-
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   function presigned_url = 'lib/queries/presigned_url'
 
