--- a/app/views/pages/passwords/new.liquid
+++ b/app/views/pages/passwords/new.liquid
@@ -1,5 +1,6 @@
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
 
   include 'theme/simple/passwords/edit'
 %}
