--- a/modules/chat/public/views/pages/inbox.html.liquid
+++ b/modules/chat/public/views/pages/inbox.html.liquid
@@ -2,9 +2,10 @@
 slug: inbox
 ---
 {% liquid
-	include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
-	function current_user = 'lib/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/queries/profiles/find'
 
 	assign new_conversation = false
 	assign active_conversation = context.params['active_conversation']
