--- a/scaffold/generators/rest_api/templates/views/pages/api/model/delete.json.liquid
+++ b/scaffold/generators/rest_api/templates/views/pages/api/model/delete.json.liquid
@@ -3,7 +3,9 @@ slug: <%= modelNamePlural %>
 method: delete
 ---
 {% liquid
-  include 'lib/must_be_authenticated_api'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  include 'lib/profile_present_or_not_authenticated', profile: current_profile
+
   function object = 'lib/queries/<%= modelNamePlural %>/find', id: context.params.id
   function object = 'lib/commands/<%= modelNamePlural %>/delete', object: object
 
