Fixed width for the score counter

--- a/app/views/partials/theme/simple/posts/summary.liquid
+++ b/app/views/partials/theme/simple/posts/summary.liquid
@@ -11,7 +11,7 @@
 <article class="card mb-10 flex">
 
   <aside class="pr-4 flex flex-col flex-shrink-0 items-center">
-		<span class="px-4 py-3 border rounded-lg {{ score_css }}">
+		<span class="w-12 h-12 flex items-center justify-center border rounded-lg {{ score_css }}">
 		  {{ post.c__score | default: 0 }}
     </span>
     <span class="sidenote">
