--- a/app/views/pages/passwords/new.liquid
+++ b/app/views/pages/passwords/new.liquid
@@ -1,6 +1,9 @@
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id
-  include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
+  unless context.current_user or context.session.reset_password_session_user_id
+    include 'theme/json/shared/not_authenticated'
+    break
+  endunless
+
 
   include 'theme/simple/passwords/edit'
 %}
