Fixed Add Question button height

--- a/app/views/partials/theme/simple/posts/index.liquid
+++ b/app/views/partials/theme/simple/posts/index.liquid
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto">
 
-  <header class="mb-5 md:flex align-middle justify-between">
+  <header class="mb-5 md:flex items-center justify-between">
     {% render 'theme/simple/ui/bigtitle', label_key: 'app.models.posts.title' %}
 
     <a href="/dashboard/posts/new" class="button">
