Questions: limit title length

--- a/app/views/partials/lib/commands/posts/create/check.liquid
+++ b/app/views/partials/lib/commands/posts/create/check.liquid
@@ -4,6 +4,7 @@
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'creator_id'
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'title'
   function c = 'lib/validations/length', c: c, object: object, field_name: 'title', minimum: 3
+  function c = 'lib/validations/length', c: c, object: object, field_name: 'title', maximum: 130
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'body'
   function c = 'lib/validations/length', c: c, object: object, field_name: 'body', minimum: 3
   function c = 'lib/validations/length', c: c, object: object, field_name: 'tags', maximum: 5
