--- a/app/views/partials/lib/commands/posts/update/check.liquid
+++ b/app/views/partials/lib/commands/posts/update/check.liquid
@@ -2,6 +2,9 @@
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'id'
+  function c = 'lib/validations/length', c: c, object: object, field_name: 'title', minimum: 3
+  function c = 'lib/validations/length', c: c, object: object, field_name: 'title', maximum: 130
+  function c = 'lib/validations/length', c: c, object: object, field_name: 'body', minimum: 3
   function c = 'lib/validations/length', c: c, object: object, field_name: 'tags', maximum: 5
 
   hash_assign object['valid'] = c.valid
