--- a/app/views/pages/comments/index.liquid
+++ b/app/views/pages/comments/index.liquid
@@ -2,7 +2,7 @@
 slug: comments
 ---
 {% function comment = 'lib/queries/comments/find', id: context.params.slug2 %}
-{% function url = 'f_link_to', object: comment.commentable %}
+{% function url = 'link_to', object: comment.commentable %}
 
 {% assign url = url | append: '#' | append: comment.uuid  %}
 {% redirect_to url %}
