--- a/app/views/partials/theme/simple/quick_search/card.liquid
+++ b/app/views/partials/theme/simple/quick_search/card.liquid
@@ -1,4 +1,4 @@
-{% function url = "f_link_to", object: model %}
+{% function url = "link_to", object: model %}
 {% assign default_photo = "https://dummyimage.com/800x4:3/eee/000&text=edit-" | append: model.type | append: '-and-upload-cover-photo' %}
 
 <div class="w-full px-0 mx-4 mb-8 overflow-hidden bg-panel rounded lg:w-1/4 md:w-3/3 card">
