Question: show number of answers

--- a/app/views/partials/lib/commands/activities/publish.liquid
+++ b/app/views/partials/lib/commands/activities/publish.liquid
@@ -7,4 +7,5 @@
   function object = 'lib/commands/activities/publish/build', uuid: uuid, type: type, ids: ids
   function object = 'lib/commands/activities/publish/check', object: object
   function object = 'lib/commands/activities/publish/execute', object: object
+  return object
 %}
