--- a/app/views/partials/lib/commands/wish_list/delete.liquid
+++ b/app/views/partials/lib/commands/wish_list/delete.liquid
@@ -1,9 +1,9 @@
 {% liquid
-  function_rc object = 'lib/commands/wish_list/delete/build', item: item
-  function_rc object = 'lib/commands/wish_list/delete/check',  object: object
+  function object = 'lib/commands/wish_list/delete/build', item: item
+  function object = 'lib/commands/wish_list/delete/check',  object: object
 
   if object.valid
-    function_rc object = 'lib/commands/items/delete/execute', object: object
+    function object = 'lib/commands/items/delete/execute', object: object
   endif
 
 
