Questions: comments delete

--- a/app/views/partials/theme/simple/posts/comments.liquid
+++ b/app/views/partials/theme/simple/posts/comments.liquid
@@ -1,23 +1,28 @@
 <ul>
   {% for comment in list %}
     <li class="mt-4 md:ml-14 pt-2 md:px-4 flex border-t border-dashed {% if forloop.last %} border-b pb-3 {% endif %}">
-      <div class="pr-2 md:pr-4 flex-shrink-0">
-        <a href="{{ creator_url }}">
-          {% liquid
-            assign img_url = comment.creator.avatar.photo.versions.tiny
-            unless img_url
-            assign img_url = 'images/user.svg' | asset_url
-            endunless
-          %}
-          <img class="w-6 h-6 md:w-10 md:h-10 rounded-full object-cover" src="{{ img_url }}" alt="{{ comment.creator.name }}">
-        </a>
-      </div>
       <div class="w-full">
         <div class="md:h-10 mb-2 md:flex justify-between items-center">
           <a href="{{ creator_url }}">
             {{ comment.creator.name }}
           </a>
-          <date datetime="{{ comment.created_at }}" class="block text-sm text-content-sidenote">{{comment.created_at | l: 'compact'}}</date>
+          <span class="block">
+            <span class="pr-5">
+              <a href="/dashboard/posts/comments/edit/{{comment.id}}" class="text-interaction">Edit</a>
+              |
+              <form action="/comments" method="post" onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }" class="inline">
+                {% include 'authenticity_token' %}
+                <input type="hidden" name="_method" value="delete">
+                <input type="hidden" name="id" value="{{ comment.id }}">
+                <input type="hidden" name="return_to" value="{% render 'link_to', post: root_post %}">
+
+                <button class="text-danger">{{ 'app.models.shared.delete' | t }}</button>
+              </form>
+            </span>
+            <date datetime="{{ comment.created_at }}" class="text-sm text-content-sidenote">
+              {{comment.created_at | l: 'compact'}}
+            </date>
+          </span>
         </div>
 
         {{ comment.body }}
