--- a/app/views/partials/theme/simple/posts/card.liquid
+++ b/app/views/partials/theme/simple/posts/card.liquid
@@ -55,7 +55,7 @@
   {% if post.comments.size > 0 %}
     <section>
       {% liquid
-        include 'theme/simple/posts/comments', list: post.comments
+        include 'theme/simple/posts/comments', list: post.comments, root_post: root_post
       %}
     </section>
   {% endif %}
