--- a/app/views/pages/comments/edit.liquid
+++ b/app/views/pages/comments/edit.liquid
@@ -5,7 +5,7 @@ slug: comments/edit/:id
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
   include 'lib/profile_present_or_redirect', profile: current_profile
 
-  function object = 'lib/queries/comments/find', id: context.params.id
+  function object = 'lib/queries/comments/find', id: context.params.id, creator_id: current_profile.id
 
   include 'theme/simple/comments/edit', object: object
 %}
