--- a/app/views/partials/lib/queries/comments/find.liquid
+++ b/app/views/partials/lib/queries/comments/find.liquid
@@ -4,7 +4,7 @@
     return null
   endunless
 
-  graphql r  = 'comments/search', id: id, limit: 1
+  graphql r  = 'comments/search', id: id, limit: 1, creator_id: creator_id
   include 'lib/handle_graphql_response', r: r, name: 'queries/comments/find'
 
   return r.comments.results.first
