--- a/app/views/partials/theme/simple/posts/comments.liquid
+++ b/app/views/partials/theme/simple/posts/comments.liquid
@@ -10,18 +10,20 @@
             {{ comment.creator.name }}
           </a>
           <span class="block">
-            <span class="pr-5">
-              <a href="/comments/edit/{{comment.id}}?return_to={{root_post_url}}" class="text-interaction">Edit</a>
-              |
-              <form action="/comments" method="post" onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }" class="inline">
-                {% include 'authenticity_token' %}
-                <input type="hidden" name="_method" value="delete">
-                <input type="hidden" name="id" value="{{ comment.id }}">
-                <input type="hidden" name="return_to" value="{% render 'link_to', post: root_post %}">
+            {% if comment.creator.id == current_profile.id %}
+              <span class="pr-5">
+                <a href="/comments/edit/{{comment.id}}?return_to={{root_post_url}}" class="text-interaction">{{ 'app.models.shared.edit' | t }}</a>
+                |
+                <form action="/comments" method="post" onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }" class="inline">
+                  {% include 'authenticity_token' %}
+                  <input type="hidden" name="_method" value="delete">
+                  <input type="hidden" name="id" value="{{ comment.id }}">
+                  <input type="hidden" name="return_to" value="{% render 'link_to', post: root_post %}">
 
-                <button class="text-danger">{{ 'app.models.shared.delete' | t }}</button>
-              </form>
-            </span>
+                  <button class="text-danger">{{ 'app.models.shared.delete' | t }}</button>
+                </form>
+              </span>
+            {% endif %}
             <date datetime="{{ comment.created_at }}" class="text-sm text-content-sidenote">
               {{comment.created_at | l: 'compact'}}
             </date>
