Questions: fix uploading images when editing answer

--- a/app/views/partials/theme/simple/dashboard/posts/edit_answer.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/edit_answer.liquid
@@ -25,3 +25,5 @@
     <button class="mt-8 button">{{ submit_label | t }}</button>
   </form>
 </div>
+
+{% render 'theme/simple/photos/s3_form', object_uuid: object.uuid, presigned_url: presigned_url, photo_type: 'screenshot' %}
