Updates for the dashboard/posts design

--- a/app/views/partials/theme/simple/ui/tags.liquid
+++ b/app/views/partials/theme/simple/ui/tags.liquid
@@ -14,7 +14,7 @@
     <ul>
       {% for tag in tags %}
         <li class="inline-block">
-          <a href="{{ url }}{{ tag | strip | url_encode }}" class="px-2 py-1 inline-block rounded bg-frame">
+          <a href="{{ url }}{{ tag | strip | url_encode }}" class="my-0.5 px-2 py-1 inline-block rounded bg-frame">
             {{ tag }}
           </a>
         </li>
