--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -521,6 +521,30 @@ metadata:
       </section>
     </div>
 
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Compact buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button button-compact</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled button-secondary</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3 p-5 flex items-center justify-center space-x-1 border styleGuide-example">
+        <button class="button button-compact">
+          {% render 'theme/simple/ui/icon', icon: 'trash' %}
+        </button>
+        <a href="http://platformos.com" class="button button-compact button-secondary">
+          {% render 'theme/simple/ui/icon', icon: 'trash' %}
+        </a>
+      </section>
+    </div>
+
   </article>
 
   <article id="styleGuide-forms" class="mt-20">
