--- a/modules/chat/public/views/pages/inbox.html.liquid
+++ b/modules/chat/public/views/pages/inbox.html.liquid
@@ -5,7 +5,7 @@ slug: inbox
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
   include 'lib/profile_present_or_redirect', profile: current_profile
 
-  function current_user = 'lib/queries/profiles/find'
+  function current_user = 'lib/queries/profiles/find', user_id: context.current_user.id
 
 	assign new_conversation = false
 	assign active_conversation = context.params['active_conversation']
