Fixed public profile layout

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,5 +1,5 @@
 <div class="flex flex-col md:flex-row ">
-  <div class="mr-5 mb-5 text-center">
+  <div class="md:w-1/4 mr-5 mb-5 text-center">
 	{% liquid
 		render 'theme/simple/profile/card', user: user, current_profile: current_profile
 
@@ -8,10 +8,10 @@
 		elsif current_profile != blank
 			render 'theme/simple/follow_button', current_profile: current_profile, user: user, big: true
 		endif
-	
+
 		if current_profile.id != user.id and chat_enabled != blank
 			render "modules/chat/message_button", current_profile: current_profile, user: user, conversation: conversation
-		endif	
+		endif
 	%}
   </div>
 
