--- a/app/views/partials/lib/commands/posts/update/build.liquid
+++ b/app/views/partials/lib/commands/posts/update/build.liquid
@@ -1,10 +1,20 @@
-{% function slug = 'generate_slug', title: object.title, id: object.id %}
+{% liquid
+  function slug = 'generate_slug', title: object.title, id: object.id
+
+  assign tags = object.tags | downcase | split: ',' | uniq
+  assign slugged_tags = '' | split: ','
+
+  for tag in tags
+    assign slugged_tag = tag | slugify
+    assign slugged_tags = slugged_tags | add_to_array: slugged_tag
+  endfor
+%}
 {% parse_json object %}
   {
     "id": {{ object.id | json }},
     "title": {{ object.title | json }},
     "body": {{ object.body | json }},
-    "tags": {{ object.tags | downcase | split: ',' | uniq }},
+    "tags": {{ slugged_tags | json }},
     "upvote_profile_ids": {{ object.upvote_profile_ids | json }},
     "downvote_profile_ids": {{ object.downvote_profile_ids | json }},
     "accepted_post_id": {{ object.accepted_post_id | json }},
