--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -3,6 +3,7 @@ slug: profile
 ---
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true, membership: true
+  include 'lib/profile_present_or_redirect', profile: current_profile
 
   assign template = "/profile/{slug}"
   assign query = context.location.pathname | extract_url_params: template
