Update the item's slug when the item is updated

--- a/app/views/partials/lib/commands/items/update/build.liquid
+++ b/app/views/partials/lib/commands/items/update/build.liquid
@@ -1,3 +1,4 @@
+{% function slug = 'generate_slug', title: object.name, id: object.id %}
 {% parse_json object %}
   {
     "id":          {{ object.id | json }},
@@ -5,7 +6,8 @@
     "tags":        {{ object.tags | downcase | split: ',' | uniq }},
     "description": {{ object.description | default: "" | json }},
     "category":    {{ object.category | default: "" | json }},
-    "price":       {{ object.price | plus: 0 | times: 100 | to_positive_integer: 1 }}
+    "price":       {{ object.price | plus: 0 | times: 100 | to_positive_integer: 1 }},
+    "slug":        {{ slug | json }}
   }
 {% endparse_json %}
 
